[package]
name = "nvdash"
version = "0.1.0"
edition = "2021"
description = "A lightweight, native NVIDIA GPU monitor for ML workloads"
license = "MIT"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.31"
nvml-wrapper = "0.10"
sysinfo = "0.33"
chrono = "0.4"

# Windows: hide console window
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
